[package]
name = "fisherman"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = [ "js" ] }
rand = "0.8.5"
termion = { version = "4.0.3", optional = true }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[features]
default = ["web"]
web = []
cli = ["dep:termion"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"
features = ["cli"]
